syntax = "proto3";

package book;

option go_package = "./pkg/pb";

// Create Product
message CreateBookRequest {
  string name = 1;
  int64 stock = 3;
  int64 price = 4;
}

message CreateBookResponse {
  int64 status = 1;
  string error = 2;
  int64 id = 3;
}

// Find One
message FindOneData {
  int64 id = 1;
  string name = 2;
  int64 stock = 4;
  int64 price = 5;
}

message FindOneRequest {
  int64 id = 1;
}

message FindOneResponse {
  int64 status = 1;
  string error = 2;
  FindOneData data = 3;
}

// Decrease Stock
message DecreaseStockRequest {
  int64 id = 1;
  int64 orderId = 2;
}

message DecreaseStockResponse {
  int64 status = 1;
  string error = 2;
}

// Services
service BookService {
  rpc CreateBook(CreateBookRequest) returns (CreateBookResponse) {};
  rpc FindOne(FindOneRequest) returns (FindOneResponse) {};
  rpc DecreaseStock(DecreaseStockRequest) returns (DecreaseStockResponse) {};
}